<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood">


        <TextView
            android:id="@+id/viewResult"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:padding="20dp"
            android:background="@color/white"
            android:gravity="bottom|end"
            android:text="@string/result"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/btnBackSpace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_7"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_8"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_9"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintEnd_toStartOf="@id/btnDvn"
        app:layout_constraintStart_toEndOf="@id/btn8" />

    <Button
        android:id="@+id/btnBackSpace"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10dp"
        android:elevation="2dp"
        android:text="@string/btnBackSpace"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:backgroundTint="@color/equally_button"
        app:layout_constraintBottom_toTopOf="@id/btnDvn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnDvn" />

    <Button
        android:id="@+id/btnLeftParent"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/RightParent"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnRightParent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDvn" />
    <Button
        android:id="@+id/btnRightParent"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/LeftParent"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMtp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_4"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="6dp"
        android:text="@string/_5"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_6"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintEnd_toStartOf="@id/btnMtp"
        app:layout_constraintStart_toEndOf="@id/btn5"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btnMtp"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/Multiplication"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnSbt"
        app:layout_constraintEnd_toStartOf="@id/btnRightParent"
        app:layout_constraintStart_toEndOf="@id/btn6" />

    <Button
        android:id="@+id/btnDvn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/Division"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnMtp"
        app:layout_constraintEnd_toStartOf="@id/btnLeftParent"
        app:layout_constraintStart_toEndOf="@id/btn9" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_1"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_2"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnDoubleZero"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_3"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnPoint"
        app:layout_constraintEnd_toStartOf="@id/btnSbt"
        app:layout_constraintStart_toEndOf="@id/btn2" />

    <Button
        android:id="@+id/btnSbt"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/Subtraction"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnReset"
        app:layout_constraintStart_toEndOf="@id/btn3" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/reset_button"
        android:elevation="2dp"
        android:text="@string/Reset"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSbt" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_0"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDoubleZero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDoubleZero"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/_00"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPoint"
        app:layout_constraintStart_toEndOf="@id/btnZero" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/number_button"
        android:elevation="2dp"
        android:text="@string/Point"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toEndOf="@id/btnDoubleZero" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sign_button"
        android:elevation="2dp"
        android:text="@string/Addition"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnResult"
        app:layout_constraintStart_toEndOf="@id/btnPoint" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="10dp"
        android:elevation="2dp"
        android:text="@string/Result"
        android:textColor="@color/white"
        android:translationZ="2dp"
        app:backgroundTint="@color/equally_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>